Use getFirst()/getLast() for list edge access in systemToolsLandInBuiltInToolsLane
Matches the project's own List Access guideline (.agents/skills/opik-backend/SKILL.md).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>